crates/knok/tests/ui/linalg_outer_shape.stderr
error: return type mismatch: inferred [TensorType { elem: F32, shape: [1, 1] }], declared [TensorType { elem: F32, shape: [1, 1, 1, 1, 1, 1] }]
 --> tests/ui/linalg_outer_shape.rs:3:1
  |
3 | #[knok::graph(backend = Backend::LlvmCpu)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `knok::graph` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `knok::prelude::*`
 --> tests/ui/linalg_outer_shape.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
